Resolves: tdf#112943 don't close popups on resize if size didn't change

Change-Id: If5331248f69098570c87da060595f5a85721c2d2
Reviewed-on: https://gerrit.libreoffice.org/44883
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>